@@ -88,7 +88,7 @@ Control can be held down while starting a drag
 While doing a drag modifers affect the operation the drag causes:
 Control - Copy the files
 Shift - Move the files
-Alt - Open a menu with the availible alternatives
+Alt - Open a menu with the available alternatives
 
 All the basic clicks are typically done with the left button, but can
 be done with the other buttons to. [Do we want this?] However some of
