@@ -419,7 +419,7 @@ Major changes in 2.9.90 are:
 * Better icons for burn: & computer: in the ui
 * Allow eject of unmounted devices
 * Better handling of DnD from mozilla
-* Make connect to server dialog availible as separate app
+* Make connect to server dialog available as separate app
 * Use GtkAboutDialog
 
 Major changes in 2.9.2 are:
