@@ -1,3 +1,14 @@
+2007-11-06  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* NEWS:
+	* docs/key_mouse_navigation.txt:
+	* libnautilus-private/nautilus-emblem-utils.c:
+	* libnautilus-private/nautilus-emblem-utils.h:
+	* src/file-manager/fm-properties-window.c:
+	* src/nautilus-emblem-sidebar.c:
+	* src/nautilus-property-browser.c:
+	Fix typo: availible -> available.
+
 2007-11-06  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-program-choosing.c:
